# whitebox

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  LICENSE  README.md  imgui.ini  package-lock.cmake
.github/workflows/: cmake-multi-platform.yml
assets/: CMakeLists.txt  imgui.frag  ras.fs  ras.vs  ras_fill.fs  ras_fill.vs  waveform.glsli  waveform.hlsli  waveform2_aa_vs.hlsl  waveform2_vs.hlsl  waveform_aa.fs  waveform_aa.vs  waveform_aa_gs.hlsl  waveform_aa_ps.hlsl  waveform_aa_vs.hlsl  waveform_bevel_aa_vs.hlsl  waveform_fill.vs  waveform_ps.hlsl  waveform_vs.hlsl
src/: app.cpp  app.h  app_event.cpp  app_event.h  app_sdl2.cpp  app_sdl2.h  app_win32.cpp  app_win32.h  config.cpp  config.h  controls.cpp  controls.h  def.h  global_state.cpp  global_state.h  gui_content_browser.cpp  gui_content_browser.h  gui_mixer.cpp  gui_mixer.h  gui_step_sequencer.cpp  gui_step_sequencer.h  gui_timeline.cpp  gui_timeline.h  main.cpp  path_def.cpp  path_def.h  popup_state_manager.h  renderer.cpp  renderer.h  renderer_d3d11.cpp  renderer_d3d11.h  renderer_opengl.cpp  renderer_opengl.h  renderer_vulkan.cpp  renderer_vulkan.h  settings_data.cpp  settings_data.h  stdpch.h  types.h  vk_stub.h  (+6 more)
src/core/: algorithm.h  audio_buffer.h  audio_format.h  audio_format_conv.cpp  audio_format_conv.h  audio_param.h  bit_manipulation.h  bitset.h  byte_buffer.h  clock.h  color.cpp  color.h  common.h  core_math.h  debug.cpp  debug.h  defer.h  deferred_job.cpp  deferred_job.h  dsp_ops.h  file.h  fs.cpp  fs.h  fs_stdc.cpp  fs_win32.cpp  intrinsics.h  io_types.h  list.h  local_queue.h  math.h  mem_info.cpp  mem_info.h  memaccess.h  memory.cpp  memory.h  midi.cpp  midi.h  midi_buffer.h  midi_file.cpp  midi_file.h  (+16 more)
src/dsp/: codec.cpp  codec.h  dsp_ops.h  param_queue.h  sample.cpp  sample.h  sampler.cpp  sampler.h
src/engine/: assets_table.cpp  assets_table.h  audio_driver_wasapi.cpp  audio_driver_wasapi.h  audio_io.cpp  audio_io.h  audio_io_pulse.cpp  audio_io_pulseaudio.cpp  audio_io_pulseaudio2.cpp  audio_io_wasapi.cpp  audio_param.h  audio_record.cpp  audio_record.h  audio_stream.cpp  audio_stream.h  clip.h  clip_edit.h  engine.cpp  engine.h  envelope_storage.h  etypes.h  event.h  event_list.h  export_prop.h  midi_data.cpp  midi_data.h  midi_voice.cpp  midi_voice.h  param_changes.h  project.cpp  project.h  pulseaudio_devicelist_wrapper.cpp  pulseaudio_devicelist_wrapper.h  sample.cpp  sample.h  sample_peaks.h  sample_table.cpp  sample_table.h  test_synth.cpp  test_synth.h  (+5 more)
src/gfx/: draw.cpp  draw.h  renderer.cpp  renderer.h  renderer2.cpp  renderer2.h  renderer_d3d11.cpp  renderer_d3d11.h  renderer_vulkan.cpp  renderer_vulkan.h  renderer_vulkan2.cpp  renderer_vulkan2.h  vk_stub.cpp  vk_stub.h  vsync_provider.cpp  vsync_provider.h  waveform_visual.cpp  waveform_visual.h
src/platform/: path_def.cpp  path_def.h  platform.cpp  platform.h
src/plughost/: plugin_interface.cpp  plugin_interface.h  plugin_manager.cpp  plugin_manager.h  vst3host.cpp  vst3host.h  wb_plug.h
src/system/: config.cpp  platform.cpp  platform.h
src/ui/: IconsMaterialSymbols.h  browser.cpp  browser.h  clip_editor.cpp  clip_editor.h  command.cpp  command.h  command_manager.cpp  command_manager.h  context_menu.cpp  context_menu.h  control_bar.cpp  control_bar.h  controls.cpp  controls.h  dialogs.cpp  dialogs.h  draw.cpp  draw.h  env_editor.cpp  env_editor.h  export_audio_dlg.cpp  file_dialog.cpp  file_dialog.h  file_dropper.cpp  file_dropper.h  font.cpp  font.h  forms.h  grid.cpp  grid.h  history.cpp  history.h  hotkeys.cpp  hotkeys.h  layout.h  mixer.cpp  mixer.h  piano_roll.cpp  piano_roll.h  (+14 more)
test/: CMakeLists.txt  test_algorithm.cpp  test_audio_buffer.cpp  test_fileio.cpp  test_math.cpp  test_project.cpp  test_pulseaudio_devicelist.cpp  test_vector.cpp  track_test.cpp
