add_library(catch catch_amalgamated.cpp catch_amalgamated.hpp)

macro(wb_add_test _NAME _SOURCE)
    add_executable(${_NAME} ${_SOURCE})
    target_link_libraries(${_NAME} catch whitebox-lib)
    add_test(NAME test_${_NAME} COMMAND ${_NAME})
endmacro(wb_add_test)

wb_add_test(test_algorithm test_algorithm.cpp)
wb_add_test(test_audio_buffer test_audio_buffer.cpp)
wb_add_test(test_fileio test_fileio.cpp)
wb_add_test(test_math test_math.cpp)
wb_add_test(test_project test_project.cpp)
wb_add_test(test_vector test_vector.cpp)
# wb_add_test(<test name> <source file>)
